--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,64 @@
+header {
+  background-image: url(img1.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
+
+.main-nav {
+  list-style: none;
+  margin-top: 30px
+}
+
+.main-nav li {
+  display: inline-block;
+}
+
+.main-nav li a {
+  color: white;
+  text-decoration: none;
+  padding: 5px 20px;
+  font-family: helvetica;
+  font-size: 15px;
+}
+
+.main-nav li.active a {
+  border: 1px solid white;
+}
+
+.main-nav li a:hover {
+  border: 1px solid white;
+}
+
+.title {
+  position: absolute;
+  width: 1200px;
+}
+
 h1 {
-  color: rgba(0, 0, 0, 1);
+  color: white;
   font-family: helvetica;
   font-size: 70px;
   text-align: center;
+  margin-top: 120px;
 }
+
 h2 {
   color: rgba(0, 0, 0, 1);
   font-family: helvetica;
   font-size: 20px;
   text-align: center;
 }
+
 p {
   color: rgba(0, 0, 0, 1);
   font-family: helvetica;
   font-size: 11px;
 }
+
 table, th, td {
-   font-family: helvetica;
-   text-align: left;
-   table-layout: fixed;
-width: 100%;
+  font-family: helvetica;
+  text-align: left;
+  table-layout: fixed;
+  width: 60%;
 }
